# pyraytrace

./: .gitignore  pyproject.toml  requirements.txt
features/: data_structures.feature
src/pyray/: __init__.py  color.py  ppm.py  structs.py
tests/: test_data_structures.py
