[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyray"
version = "0.0.1"
authors = [
  {name="J.R.", email="floobyt@gmail.com"}
]
description = "A pretty by-the-book ray tracer"
readme = "README.md"
requires_python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]